# bc-envelope-rust

./: .gitignore  AGENTS.md  CODING.md  Cargo.toml  README.md  debug_test.rs  run_tests.sh
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
bc-envelope-pattern/: Cargo.toml
bc-envelope-pattern/src/: lib.rs
bc-envelope-pattern/src/pattern/: AGENTS.md  REPEAT_STRATEGIES.md  matcher.rs  pattern_impl.rs  vm.rs
bc-envelope-pattern/src/pattern/leaf/: array_pattern.rs  bool_pattern.rs  byte_string_pattern.rs  cbor_pattern.rs  date_pattern.rs  leaf_pattern.rs  map_pattern.rs  mod.rs  null_pattern.rs  number_pattern.rs  tagged_pattern.rs
bc-envelope-pattern/src/pattern/meta/: meta_pattern.rs  mod.rs  none_pattern.rs  not_pattern.rs  or_pattern.rs  repeat_pattern.rs
bc-envelope-pattern/src/pattern/structure/: digest_pattern.rs  object_pattern.rs  obscured_pattern.rs  predicate_pattern.rs  wrapped_pattern.rs
bc-envelope-pattern/tests/: pattern_tests.rs  pattern_tests_leaf.rs  pattern_tests_meta.rs  pattern_tests_repeat.rs  pattern_tests_structure.rs
bc-envelope-pattern/tests/common/: check_encoding.rs  test_data.rs
docs/: draft-mcnally-deterministic-cbor-12.txt  draft-mcnally-envelope-09.txt  expected-text-output-rubric.md
docs/bc-research/: bcr-2023-001-compressed-message.md  bcr-2023-005-envelope-compression.md  bcr-2025-004-permit.md
examples/: null_tag_patterns.rs
src/: assertion.rs  assertions.rs  cbor.rs  check_encoding.rs  compress.rs  digest.rs  elide.rs  enclose.rs  encrypt.rs  envelope.rs  envelope_error.rs  error.rs  expression.rs  format.rs  format_context.rs  function.rs  function_registry.rs  functions.rs  functions_store.rs  into_envelope.rs  known_functions.rs  known_parameters.rs  known_value.rs  known_value_registry.rs  known_values.rs  known_values_store.rs  lib.rs  lib.rs.bak  parameter.rs  parameter_registry.rs  parameters.rs  parameters_store.rs  preamble.rs  prelude.rs  queries.rs  recipient.rs  salt.rs  seal.rs  signature.rs  sskr.rs  (+5 more)
src/base/: assertion.rs  assertions.rs  cbor.rs  digest.rs  elide.rs  envelope.rs  envelope_codable.rs  envelope_decodable.rs  envelope_encodable.rs  envelope_summary.rs  error.rs  format.rs  format_context.rs  from_envelope.rs  into_envelope.rs  leaf.rs  mod.rs  queries.rs  tree_format.rs  types.rs  walk.rs  wrap.rs
src/expressions/: expression.rs  function.rs  functions.rs  functions_store.rs  mod.rs  parameter.rs  parameters.rs  parameters_store.rs
src/extension/: attachment.rs  compress.rs  encrypt.rs  mod.rs  proof.rs  recipient.rs  salt.rs  secret.rs  signature.rs  sskr.rs  transaction.rs  types.rs
src/extension/attachment/: attachment_impl.rs  attachments.rs  impl_attachable_macro.rs  mod.rs
src/extension/edge/: edge_impl.rs  edges.rs  impl_edgeable_macro.rs  mod.rs
src/extension/expression/: expression_impl.rs  function.rs  functions.rs  mod.rs  parameter.rs  request.rs  response.rs
src/extension/expressions/: event.rs  expression.rs  function.rs  functions.rs  functions_store.rs  mod.rs  parameter.rs  parameters.rs  parameters_store.rs  request.rs  response.rs
src/extension/known_values/: known_value.rs  known_values_registry.rs  known_values_store.rs  mod.rs  registry.rs
src/extension/kv/: known_value.rs  mod.rs
src/extension/signature/: mod.rs  signature_impl.rs  signature_metadata.rs
src/extension/transaction/: continuation.rs  mod.rs  notes.md  sealed_request.rs  sealed_response.rs  transaction_impl.rs
src/extension/xid/: mod.rs  xid_document.rs  xid_function.rs
src/format/: diagnostic.rs  envelope_summary.rs  format_context.rs  hex.rs  mermaid.rs  mod.rs  notation.rs  tree.rs  tree_format.rs
src/known_values/: known_value.rs  known_values_store.rs  mod.rs
src/pattern/: AGENTS.md  and_pattern.rs  array_pattern.rs  assertions_pattern.rs  atomic.rs  bool_pattern.rs  byte_string_pattern.rs  compile.rs  digest_pattern.rs  greediness.rs  known_value_pattern.rs  leaf_pattern.rs  map_pattern.rs  matcher.rs  mod.rs  node_pattern.rs  number_pattern.rs  object_pattern.rs  obscured_pattern.rs  or_pattern.rs  pattern.rs  pattern_impl.rs  predicate_pattern.rs  repeat_pattern.rs  search_pattern.rs  sequence_pattern.rs  subject_pattern.rs  tag_pattern.rs  tag_pattern.rs.new  text_pattern.rs  vm.rs  wrapped_pattern.rs
src/pattern/leaf/: array_pattern.rs  bool_pattern.rs  byte_string_pattern.rs  cbor_pattern.rs  date_pattern.rs  known_value_pattern.rs  leaf_pattern.rs  map_pattern.rs  mod.rs  null_pattern.rs  number_pattern.rs  tag_pattern.rs  tagged_pattern.rs  text_pattern.rs
src/pattern/meta/: and_pattern.rs  any_pattern.rs  capture_pattern.rs  meta_pattern.rs  mod.rs  none_pattern.rs  not_pattern.rs  or_pattern.rs  repeat_pattern.rs  search_pattern.rs  sequence_pattern.rs
src/pattern/structure/: assertions_pattern.rs  digest_pattern.rs  mod.rs  node_pattern.rs  object_pattern.rs  obscured_pattern.rs  predicate_pattern.rs  structure_pattern.rs  subject_pattern.rs  wrapped_pattern.rs
src/tests/: check_encoding.rs  compression_tests.rs  core_encoding_tests.rs  core_nesting_tests.rs  core_tests.rs  crypto_tests.rs  elision_tests.rs  encrypted_tests.rs  expressions_tests.rs  format_tests.rs  function_tests.rs  non_correlation_tests.rs  obscuring_tests.rs  seed.rs  test_data.rs  type_tests.rs
tests/: attachment_tests.rs  compression_tests.rs  core_encoding_tests.rs  core_nesting_tests.rs  core_tests.rs  crypto_tests.rs  ed25519_tests.rs  edge_tests.rs  elision_tests.rs  encapsulation_tests.rs  encrypted_tests.rs  expressions_tests.rs  format_tests.rs  keypair_signing_tests.rs  multi_permit_tests.rs  non_correlation_tests.rs  obscuring_tests.rs  pattern_test_repeat.rs  pattern_tests.rs  pattern_tests_leaf.rs  pattern_tests_meta.rs  pattern_tests_repeat.rs  pattern_tests_structure.rs  proof_tests.rs  signature_tests.rs  ssh_tests.rs  sskr_tests.rs  test_data.rs.inc  test_seed.rs.inc  type_tests.rs  xid_tests.rs
tests/common/: check_encoding.rs  mod.rs  pattern_utils.rs  test_data.rs  test_seed.rs
