[package]
name = "bc-envelope"
version = "0.30.0"
edition = "2024"
description = "Gordian Envelope for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-envelope-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-envelope"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = ["data-structures", "encoding"] # https://crates.io/category_slugs

[dependencies]
dcbor = { version = "^0.20.0", features = ["anyhow", "multithreaded"] }
bc-rand = "^0.4.0"
bc-crypto = "^0.9.0"
bc-components = "^0.22.0"
bc-ur = "^0.10.0"
known-values = { version = "^0.5.0", optional = true }

paste = "^1.0.12"
hex = "^0.4.3"
itertools = "^0.11.0"
thiserror = "^1.0.48"
anyhow = "^1.0.0"
bytes = "^1.5.0"
regex = "1.11.1"
ssh-key = { version = "=0.6.7", optional = true, default-features = false, features = [
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
] }

[dev-dependencies]
hex-literal = "^0.4.1"
lazy_static = "^1.4.0"
indoc = "^2.0.0"
version-sync = "^0.9.0"

[features]
attachment = ["known_value", "types"]
compress = []
encrypt = ["known_value"]
expression = ["known_value"]
known_value = ["dep:known-values"]
multithreaded = ["dcbor/multithreaded"]
proof = []
recipient = ["encrypt"]
salt = ["known_value"]
secret = ["encrypt", "known_value"]
signature = ["known_value"]
ssh = ["dep:ssh-key", "signature"]
sskr = ["encrypt"]
types = ["known_value"]

default = [
    "attachment",
    "compress",
    "encrypt",
    "expression",
    "known_value",
    "proof",
    "recipient",
    "salt",
    "secret",
    "signature",
    "ssh",
    "sskr",
    "types",
]
