[package]
name = "bc-envelope"
version = "0.43.0"
edition = "2024"
description = "Gordian Envelope for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-envelope-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-envelope"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = ["data-structures", "encoding"] # https://crates.io/category_slugs

[dependencies]
dcbor = { version = "^0.25.0", features = ["multithreaded"] }
bc-rand = "^0.5.0"
bc-crypto = { version = "^0.14.0", default-features = false, features = [] }
bc-components = { version = "^0.31.0", default-features = false, features = [] }
bc-ur = "^0.19.0"
known-values = { version = "^0.15.0", optional = true, default-features = false }

paste = "^1.0.12"
hex = "^0.4.3"
itertools = "^0.14.0"
thiserror = "^2.0"
bytes = "^1.5.0"
ssh-key = { version = "=0.6.7", optional = true, default-features = false, features = [
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
] }

[dev-dependencies]
hex-literal = "^1.1.0"
lazy_static = "^1.4.0"
indoc = "^2.0.0"
version-sync = "^0.9.0"

[features]
attachment = ["known_value", "types"]
edge = ["known_value", "signature"]
compress = []
ed25519 = ["signature", "bc-crypto/ed25519", "bc-components/ed25519"]
encrypt = ["known_value"]
expression = ["known_value"]
known_value = ["dep:known-values"]
known-values-directory-loading = ["known-values?/directory-loading"]
multithreaded = ["dcbor/multithreaded"]
pqcrypto = ["bc-components/pqcrypto"]
proof = []
recipient = ["encrypt"]
salt = ["known_value"]
secp256k1 = ["signature", "bc-crypto/secp256k1", "bc-components/secp256k1"]
secret = ["encrypt", "known_value"]
signature = ["known_value"]
ssh = ["dep:ssh-key", "signature", "bc-components/ssh"]
ssh-agent = ["dep:ssh-key", "bc-components/ssh", "bc-components/ssh-agent"]
sskr = ["encrypt"]
types = ["known_value"]

default = [
    "attachment",
    "compress",
    "edge",
    "ed25519",
    "encrypt",
    "expression",
    "known_value",
    "known-values-directory-loading",
    "pqcrypto",
    "proof",
    "recipient",
    "salt",
    "secp256k1",
    "secret",
    "signature",
    "ssh",
    "sskr",
    "types",
]
