[package]
name = "bc-envelope-pattern"
version = "0.1.0"
edition = "2024"

[dependencies]
bc-envelope = { path = ".." }
regex = "1.11.1"
known-values = "^0.6.0"
dcbor = { version = "^0.21.0", features = ["anyhow", "multithreaded"] }
bc-components = "^0.23.0"
hex = "^0.4.3"

[dev-dependencies]
hex-literal = "^0.4.1"
indoc = "^2.0.0"
bc-rand = "^0.4.0"
anyhow = "^1.0.0"

[features]
default = ["signature", "encrypt", "compress", "known_value", "types"]
signature = []
encrypt = []
compress = []
known_value = []
types = []

